--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^8.0.2",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
